# jp-prefecture

./: Cargo.toml  README.md
.github/workflows/: lint-fmt-test.yml  test.yml
examples/: code.rs  print.rs
src/: lib.rs  mapping.rs  prefectures.rs
