[package]
name = "jp-prefecture"
version = "0.1.1"
authors = ["Ittoh Kimura <kimura.itto.kd3@gmail.com>"]
edition = "2021"
description = "an utility crate of using Japanese prefectures"
readme = "README.md"
license = "MIT"
keywords = ["japanese", "prefecture"]
categories = ["localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
thiserror = "1.0.30"

[dev-dependencies]
test-case = "2.0.2"