[package]
name = "jp-prefecture"
version = "3.0.0"
authors = ["Ittoh Kimura <kimura.itto.kd3@gmail.com>"]
edition = "2021"
description = "an utility crate of using Japanese prefectures"
readme = "README.md"
license = "MIT"
keywords = ["japanese", "prefecture"]
categories = ["localization"]
documentation = "https://docs.rs/jp-prefecture/latest/jp_prefecture/"
repository = "https://github.com/itto-ki/jp-prefecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
thiserror = "1.0.30"

[dev-dependencies]
test-case = "3.0.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "jp-prefecture = \"[a-z0-9\\.-]+\"", replace = "jp-prefecture = \"{{version}}\"" },
    { file = "src/lib.rs", search = "jp-prefecture = \"[a-z0-9\\.-]+\"", replace = "jp-prefecture = \"{{version}}\"" },
]